--- a/GUI/src/gui/MainWindow.form
+++ b/GUI/src/gui/MainWindow.form
@@ -162,6 +162,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="CLEAR MESSAGEBOX"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="clrChatMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="reset">
       <Properties>
