--- a/GUI/src/gui/MainWindow.form
+++ b/GUI/src/gui/MainWindow.form
@@ -120,6 +120,7 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="addNewPersonButtonMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addNewPersonButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="removePersonButton">
