Few fixes in add and remove routines. Started working on recognition model

--- a/GUI/src/gui/MainWindow.form
+++ b/GUI/src/gui/MainWindow.form
@@ -140,6 +140,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="LIST DATABASE"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="listDatabaseButtonMouseClicked"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
