--- a/GUI/src/gui/MainWindow.form
+++ b/GUI/src/gui/MainWindow.form
@@ -61,10 +61,7 @@
                               <Component id="removeTextField" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="addNewPersonButton" alignment="0" pref="257" max="32767" attributes="0"/>
-                                  <Component id="jButton1" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="addNewPersonButton" pref="257" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="addTextField" min="-2" pref="241" max="-2" attributes="0"/>
                           </Group>
@@ -90,9 +87,7 @@
                   <Component id="removePersonButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="removeTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
               <Component id="listDatabaseButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
@@ -113,6 +108,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="OPEN IN CURRENT CONFIGURATION"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="openInCurrentConfigurationButtonMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="addNewPersonButton">
       <Properties>
@@ -130,11 +128,6 @@
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="removePersonButtonMouseClicked"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="(RE) TRAIN NEURAL NETWORK"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="listDatabaseButton">
       <Properties>
