--- a/GUI/src/gui/MainWindow.form
+++ b/GUI/src/gui/MainWindow.form
@@ -219,6 +219,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="RESET APPLICATION"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="resetMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="addTextField">
     </Component>
